--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./Assets/letter-z.svg" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+      integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ziv Gliser</title>
   </head>
@@ -86,6 +93,232 @@
         </section>
         <section class="section section-third">
           <h1 class="title-main-second title3">PROJECTS</h1>
+          <div class="container">
+            <div class="card-carousel">
+              <div class="card" id="1">
+                <div class="card-top">
+                  <div class="card-img">
+                    <img src="./Assets/pokedexLogo.png" alt="Fallback Image" />
+                    <img
+                      src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExYjcwMTAxZmU0YmZiM2ZiYjM3ZDkwYzM5NTgzODU0ODU3NWVjOGE1YiZjdD1n/tlGD7PDy1w8fK/giphy.gif"
+                      alt="Your Project Gif"
+                    />
+                  </div>
+                  <div class="card-hover">
+                    <i class="fas fa-play card-hover-icon"></i>
+                  </div>
+                </div>
+                <div class="card-content">
+                  <h2 class="card-header">Pokedex</h2>
+                  <div class="card-tech">
+                    <ul>
+                      <li>HTML</li>
+                      <li>CSS</li>
+                      <li>JavaScript</li>
+                    </ul>
+                  </div>
+                  <p class="card-summary">
+                    An informational database of the fictional creatures in the
+                    Pokémon universe.
+                  </p>
+
+                  <div class="card-links">
+                    <a
+                      href="https://github.com/Zivgl66/PokedexReact"
+                      target="_blank"
+                    >
+                      <i class="fa-brands fa-github"></i>
+                    </a>
+                    <a
+                      href="https://pokedex-zivgl66.vercel.app/"
+                      target="_blank"
+                    >
+                      <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="card" id="2">
+                <div class="card-top">
+                  <div class="card-img">
+                    <img src="./Assets/AmazoniaLogo.png" alt="Fallback Image" />
+                    <img
+                      src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExYjcwMTAxZmU0YmZiM2ZiYjM3ZDkwYzM5NTgzODU0ODU3NWVjOGE1YiZjdD1n/tlGD7PDy1w8fK/giphy.gif"
+                      alt="Your Project Gif"
+                    />
+                  </div>
+                  <div class="card-hover">
+                    <i class="fas fa-play card-hover-icon"></i>
+                  </div>
+                </div>
+                <div class="card-content">
+                  <h2 class="card-header">Amazonia</h2>
+                  <div class="card-tech">
+                    <ul>
+                      <li>React.js</li>
+                      <li>Node.js</li>
+                      <li>MongoDB</li>
+                    </ul>
+                  </div>
+                  <p class="card-summary">
+                    An Ecommerce website based on Amazon.
+                  </p>
+                  <div class="card-links">
+                    <a
+                      href="https://github.com/Zivgl66/Fake-Amazon"
+                      target="_blank"
+                    >
+                      <i class="fa-brands fa-github"></i>
+                    </a>
+                    <a href="https://amazonia-nu.vercel.app/" target="_blank">
+                      <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="card" id="3">
+                <div class="card-top">
+                  <div class="card-img">
+                    <img src="./Assets/PortLogo.png" alt="Fallback Image" />
+                    <img
+                      src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExYjcwMTAxZmU0YmZiM2ZiYjM3ZDkwYzM5NTgzODU0ODU3NWVjOGE1YiZjdD1n/tlGD7PDy1w8fK/giphy.gif"
+                      alt="Your Project Gif"
+                    />
+                  </div>
+                  <div class="card-hover">
+                    <i class="fas fa-play card-hover-icon"></i>
+                  </div>
+                </div>
+                <div class="card-content">
+                  <h2 class="card-header">Portfolio 3D Room</h2>
+                  <div class="card-tech">
+                    <ul>
+                      <li>Vite</li>
+                      <li>Three.js</li>
+                      <li>Blender</li>
+                    </ul>
+                  </div>
+                  <p class="card-summary">
+                    A Portfolio website showcasing my developer skills. (suited
+                    for pc)
+                  </p>
+
+                  <div class="card-links">
+                    <div class="card-link">
+                      <a
+                        href="https://github.com/Zivgl66/Portfolio-Room3D"
+                        target="_blank"
+                      >
+                        <i class="fa-brands fa-github"></i>
+                      </a>
+                    </div>
+                    <div class="card-link">
+                      <a
+                        href="https://portfolio-room3d.vercel.app/"
+                        target="_blank"
+                      >
+                        <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="card" id="4">
+                <div class="card-top">
+                  <div class="card-img">
+                    <img src="./Assets/ZivPortLogo.png" alt="Fallback Image" />
+                    <img
+                      src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExYjcwMTAxZmU0YmZiM2ZiYjM3ZDkwYzM5NTgzODU0ODU3NWVjOGE1YiZjdD1n/tlGD7PDy1w8fK/giphy.gif"
+                      alt="Your Project Gif"
+                    />
+                  </div>
+                  <div class="card-hover">
+                    <i class="fas fa-play card-hover-icon"></i>
+                  </div>
+                </div>
+                <div class="card-content">
+                  <h2 class="card-header">Portfolio Ziv</h2>
+                  <div class="card-tech">
+                    <ul>
+                      <li>Vite</li>
+                      <li>Three.js</li>
+                      <li>Blender</li>
+                    </ul>
+                  </div>
+                  <p class="card-summary">
+                    A Portfolio website showcasing my developer tools as well as
+                    my designing skills.
+                  </p>
+
+                  <div class="card-links">
+                    <div class="card-link">
+                      <a
+                        href="https://github.com/Zivgl66/Ziv-Porfolio"
+                        target="_blank"
+                      >
+                        <i class="fa-brands fa-github"></i>
+                      </a>
+                    </div>
+                    <div class="card-link">
+                      <a
+                        href="https://ziv-porfolio.vercel.app/"
+                        target="_blank"
+                      >
+                        <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="card" id="5">
+                <div class="card-top">
+                  <div class="card-img">
+                    <img
+                      src="./Assets/CodeblockLogo.jpeg"
+                      alt="Fallback Image"
+                    />
+                    <img
+                      src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExYjcwMTAxZmU0YmZiM2ZiYjM3ZDkwYzM5NTgzODU0ODU3NWVjOGE1YiZjdD1n/tlGD7PDy1w8fK/giphy.gif"
+                      alt="Your Project Gif"
+                    />
+                  </div>
+                  <div class="card-hover">
+                    <i class="fas fa-play card-hover-icon"></i>
+                  </div>
+                </div>
+                <div class="card-content">
+                  <h2 class="card-header">CodeBlock</h2>
+                  <div class="card-tech">
+                    <ul>
+                      <li>HTML</li>
+                      <li>CSS</li>
+                      <li>React.js</li>
+                    </ul>
+                  </div>
+                  <p class="card-summary">
+                    an online coding web application that allows students to
+                    change code in real time while a mentor is present.
+                  </p>
+
+                  <div class="card-links">
+                    <div class="card-link">
+                      <a
+                        href="https://github.com/Zivgl66/Codeblock"
+                        target="_blank"
+                      >
+                        <i class="fa-brands fa-github"></i>
+                      </a>
+                    </div>
+                    <div class="card-link">
+                      <a href="https://codeblock.vercel.app/" target="_blank">
+                        <i class="fa-solid fa-arrow-up-right-from-square"></i>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </section>
         <section class="section section-forth">
           <h1 class="title-main-second title4">SKILLS</h1>
