added arrows to carousel

--- a/index.html
+++ b/index.html
@@ -95,6 +95,14 @@
           <h1 class="title-main-second title3">PROJECTS</h1>
           <div class="container">
             <div class="card-carousel">
+              <div class="card-carousel-buttons">
+                <button class="carousel-next">
+                  <i class="fa-solid fa-arrow-right"></i>
+                </button>
+                <button class="carousel-prev">
+                  <i class="fa-solid fa-arrow-left"></i>
+                </button>
+              </div>
               <div class="card" id="1">
                 <div class="card-top">
                   <div class="card-img">
