added contact links

--- a/index.html
+++ b/index.html
@@ -329,7 +329,24 @@
           </div>
         </section>
         <section class="section section-forth">
-          <h1 class="title-main-second title4">SKILLS</h1>
+          <h1 class="title-main-second title4">CONTACT ME</h1>
+          <div class="contact-links">
+            <a href="mailto:zivgl66@gmail.com" target="_blank"
+              ><i class="fa-solid fa-square-envelope"></i
+            ></a>
+            <a
+              href="https://www.linkedin.com/in/ziv-gliser-b0734022b
+"
+              target="_blank"
+              ><i class="fa-brands fa-linkedin"></i
+            ></a>
+            <a href="https://www.instagram.com/zivgalitzer" target="_blank"
+              ><i class="fa-brands fa-square-instagram"></i>
+            </a>
+            <a href="https://github.com/Zivgl66" target="_blank"
+              ><i class="fa-brands fa-square-github"></i
+            ></a>
+          </div>
           <button class="arrow-svg-wrapper-up">
             <svg
               xmlns="http://www.w3.org/2000/svg"
