added model of a running character to the 3rd section

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
       </div>
       <div class="page-wrapper">
-        <section class="section section-first">
+        <section class="section section-first section1">
           <!-- Intro -->
           <div class="intro-text text-flex">
             <p>Hello, Welcome to my Portfolio!</p>
@@ -81,7 +81,7 @@
             </svg>
           </div>
         </section>
-        <section class="section section-second">
+        <section class="section section-second section2">
           <h1 class="title-main-second title2">ME MYSELF AND I</h1>
           <div class="second-title">
             <p class="title-sub-second">
@@ -91,7 +91,7 @@
             </p>
           </div>
         </section>
-        <section class="section section-third">
+        <section class="section section-third section3">
           <h1 class="title-main-second title3">PROJECTS</h1>
           <div class="container">
             <div class="card-carousel">
@@ -328,22 +328,26 @@
             </div>
           </div>
         </section>
-        <section class="section section-forth">
+        <section class="section section-forth section4">
           <h1 class="title-main-second title4">CONTACT ME</h1>
           <div class="contact-links">
-            <a href="mailto:zivgl66@gmail.com" target="_blank"
+            <a href="mailto:zivgl66@gmail.com" target="_blank" class="link1"
               ><i class="fa-solid fa-square-envelope"></i
             ></a>
             <a
               href="https://www.linkedin.com/in/ziv-gliser-b0734022b
 "
               target="_blank"
+              class="link2"
               ><i class="fa-brands fa-linkedin"></i
             ></a>
-            <a href="https://www.instagram.com/zivgalitzer" target="_blank"
+            <a
+              href="https://www.instagram.com/zivgalitzer"
+              target="_blank"
+              class="link3"
               ><i class="fa-brands fa-square-instagram"></i>
             </a>
-            <a href="https://github.com/Zivgl66" target="_blank"
+            <a href="https://github.com/Zivgl66" target="_blank" class="link4"
               ><i class="fa-brands fa-square-github"></i
             ></a>
           </div>
