--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <!-- end of Preloader -->
 
     <div class="page" asscroll-container>
+      <!-- toggle bar -->
       <div class="toggle-bar">
         <div class="sun-wrapper">
           <svg
@@ -62,6 +63,8 @@
           </svg>
         </div>
       </div>
+      <!-- End toggle bar -->
+
       <div class="page-wrapper">
         <section class="section section-first section1">
           <!-- Intro -->
@@ -69,9 +72,16 @@
             <p>Hello, Welcome to my Portfolio!</p>
           </div>
           <!-- end of Intro -->
-          <h1 class="title-main firstLine first-move">Ziv</h1>
-          <h1 class="title-main secondLine">Gliser</h1>
-          <p class="title-sub">Full Stack Developer</p>
+
+          <!--                  First Section                   -->
+          <div class="main-title-wrapper">
+            <h1 class="title-main firstLine first-move">ZIV</h1>
+            <h1 class="title-main secondLine">GLISER</h1>
+            <div class="title-sub">
+              <span class="text_1">Full Stack Developer</span>
+              <span class="text_2">Web Designer</span>
+            </div>
+          </div>
           <div class="arrow-svg-wrapper">
             <svg xmlns="http://www.w3.org/2000/svg" height="24" width="24">
               <path
@@ -81,26 +91,118 @@
             </svg>
           </div>
         </section>
+        <div class="section-margin"></div>
+        <!--                  Second Section                   -->
+
         <section class="section section-second section2">
-          <h1 class="title-main-second title2">ME MYSELF AND I</h1>
-          <div class="second-title">
-            <p class="title-sub-second">
-              I'm a creative and collaborative developer with willingness to
-              learn and improve. Highly motivated and passionate about coding
-              and designing.
-            </p>
+          <div class="title2-wrapper">
+            <h1 class="title-main-second title2 title2-word1">
+              ME
+            </h1>
+            <h1 class="title-main-second title2 title2-word2">
+              MYSELF
+            </h1>
+            <h1 class="title-main-second title2 title2-word3">
+              AND
+            </h1>
+            <h1 class="title-main-second title2 title2-word4">
+              I
+            </h1>
+          </div>
+          <div class="about-wrapper">
+            <div class="summary">
+              <p class="summary-paragraph">
+                I'm a
+                <span class="every-second-word">
+                  creative
+                </span>
+                and
+                <span class="every-second-word">
+                  collaborative developer
+                </span>
+                with
+                <span class="every-second-word"> willingness</span>
+                to
+                <span class="every-second-word">
+                  learn
+                </span>
+                and
+                <span class="every-second-word">
+                  improve.
+                </span>
+                <span class="every-second-word">
+                  Highly motivated
+                </span>
+                and
+                <span class="every-second-word">
+                  passionate
+                </span>
+                about
+                <span class="every-second-word">
+                  coding
+                </span>
+                and
+                <span class="every-second-word">
+                  dsesigning.
+                </span>
+              </p>
+              <p class="summary-paragraph">
+                In the end of 2021 I took a
+                <span class="every-second-word">
+                  Full Stack development
+                </span>
+                at
+                <span class="every-second-word"> HackerU College,</span> and
+                I've completed several
+                <span class="every-second-word"> online courses</span>
+                in
+                <span class="every-second-word"> web development,</span>
+                <span class="every-second-word"> graphic design,</span> and
+                <span class="every-second-word"> user experience.</span>
+              </p>
+            </div>
+            <div class="object"></div>
+            <div class="educational-skills">
+              <p class="educational-about">
+                Some of my
+                <span class="every-second-word"> Skills</span> include:
+              </p>
+              <ul class="educational-table">
+                <li>HTML / CSS</li>
+                <li>JavaScript / jQuery / TypeScript</li>
+                <li>React.js / Angular / Vite</li>
+                <li>Next.js / Vue.js / Three.js</li>
+                <li>Node.js / PHP</li>
+                <li>Firebase / MongoDB / SQL</li>
+                <li>Git / GitHub</li>
+                <li>Blender / Illustrator</li>
+                <li>UX/UI design</li>
+              </ul>
+            </div>
           </div>
         </section>
+        <div class="section-margin"></div>
+
+        <!--                  Third Section                   -->
         <section class="section section-third section3">
-          <h1 class="title-main-second title3">PROJECTS</h1>
+          <h1 class="title-main-second title3">
+            <span>P</span>
+            <span>R</span>
+            <span>O</span>
+            <span>J</span>
+            <span>E</span>
+            <span>C</span>
+            <span>T</span>
+            <span>S</span>
+          </h1>
           <div class="container">
             <div class="card-carousel">
               <div class="card-carousel-buttons">
                 <button class="carousel-next">
-                  <i class="fa-solid fa-arrow-right"></i>
+                  <!-- <i class="fa-solid fa-arrow-right"></i> -->
                 </button>
                 <button class="carousel-prev">
-                  <i class="fa-solid fa-arrow-left"></i>
+                  <!-- <i class="fa-solid fa-arrow-left"></i> -->
                 </button>
               </div>
               <div class="card" id="1">
@@ -328,8 +430,18 @@
             </div>
           </div>
         </section>
+        <div class="section-margin"></div>
+
+        <!--                  Forth Section                   -->
+
         <section class="section section-forth section4">
-          <h1 class="title-main-second title4">CONTACT ME</h1>
+          <h1 class="title-main-second title4">
+            <span>
+              C
+            </span>
+            <span> O</span> <span> N</span> <span> T</span> <span> A</span>
+            <span> C</span> <span> T</span> <span> M</span> <span> E</span>
+          </h1>
           <div class="contact-links">
             <a href="mailto:zivgl66@gmail.com" target="_blank" class="link1"
               ><i class="fa-solid fa-square-envelope"></i
