moved, edited, chagned.

--- a/index.html
+++ b/index.html
@@ -186,14 +186,7 @@
         <!--                  Third Section                   -->
         <section class="section section-third section3">
           <h1 class="title-main-second title3">
-            <span>P</span>
-            <span>R</span>
-            <span>O</span>
-            <span>J</span>
-            <span>E</span>
-            <span>C</span>
-            <span>T</span>
-            <span>S</span>
+            PROJECTS
           </h1>
           <div class="container">
             <div class="card-carousel">
@@ -436,11 +429,7 @@
 
         <section class="section section-forth section4">
           <h1 class="title-main-second title4">
-            <span>
-              C
-            </span>
-            <span> O</span> <span> N</span> <span> T</span> <span> A</span>
-            <span> C</span> <span> T</span> <span> M</span> <span> E</span>
+          CONTACT ME
           </h1>
           <div class="contact-links">
             <a href="mailto:zivgl66@gmail.com" target="_blank" class="link1"
