media query for medium screen

--- a/index.html
+++ b/index.html
@@ -399,8 +399,7 @@
                     </ul>
                   </div>
                   <p class="card-summary">
-                    an online coding web application that allows students to
-                    change code in real time while a mentor is present.
+                    an online coding web application for mentors and students.
                   </p>
 
                   <div class="card-links">
