media query for small screens

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             </div>
           </div>
         </section>
-        <div class="section-margin"></div>
+        <div class="section-margin section3-margin"></div>
 
         <!--                  Third Section                   -->
         <section class="section section-third section3">
@@ -428,7 +428,7 @@
 
         <section class="section section-forth section4">
           <h1 class="title-main-second title4">
-          CONTACT ME
+            CONTACT ME
           </h1>
           <div class="contact-links">
             <a href="mailto:zivgl66@gmail.com" target="_blank" class="link1"
