updated animation for both screen sizes.

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </svg>
           </div>
         </section>
-        <div class="section-margin"></div>
+        <!-- <div class="section-margin"></div> -->
         <!--                  Second Section                   -->
 
         <section class="section section-second section2">
@@ -422,7 +422,7 @@
             </div>
           </div>
         </section>
-        <div class="section-margin"></div>
+        <!-- <div class="section-margin"></div> -->
 
         <!--                  Forth Section                   -->
 
@@ -431,23 +431,23 @@
             CONTACT ME
           </h1>
           <div class="contact-links">
-            <a href="mailto:zivgl66@gmail.com" target="_blank" class="link1"
+            <a href="mailto:zivgl66@gmail.com" target="_blank" class="link1 link-animate"
               ><i class="fa-solid fa-square-envelope"></i
             ></a>
             <a
               href="https://www.linkedin.com/in/ziv-gliser-b0734022b
 "
               target="_blank"
-              class="link2"
+              class="link2 link-animate"
               ><i class="fa-brands fa-linkedin"></i
             ></a>
             <a
               href="https://www.instagram.com/zivgalitzer"
               target="_blank"
-              class="link3"
+              class="link3 link-animate"
               ><i class="fa-brands fa-square-instagram"></i>
             </a>
-            <a href="https://github.com/Zivgl66" target="_blank" class="link4"
+            <a href="https://github.com/Zivgl66" target="_blank" class="link4 link-animate"
               ><i class="fa-brands fa-square-github"></i
             ></a>
           </div>
