--- a/index.html
+++ b/index.html
@@ -112,60 +112,20 @@
           <div class="about-wrapper">
             <div class="summary about-paragraph">
               <p class="summary-paragraph">
-                I'm a
-                <span class="every-second-word">
-                  creative
-                </span>
-                and
-                <span class="every-second-word">
-                  collaborative developer
-                </span>
-                with
-                <span class="every-second-word"> willingness</span>
-                to
-                <span class="every-second-word">
-                  learn
-                </span>
-                and
-                <span class="every-second-word">
-                  improve.
-                </span>
-                <span class="every-second-word">
-                  Highly motivated
-                </span>
-                and
-                <span class="every-second-word">
-                  passionate
-                </span>
-                about
-                <span class="every-second-word">
-                  coding
-                </span>
-                and
-                <span class="every-second-word">
-                  dsesigning.
-                </span>
+                I'm a creative and collaborative developer with willingness to
+                learn and improve. Highly motivated and passionate about coding
+                and dsesigning.
               </p>
               <p class="summary-paragraph">
-                In the end of 2021 I took a
-                <span class="every-second-word">
-                  Full Stack development
-                </span>
-                at
-                <span class="every-second-word"> HackerU College,</span> and
-                I've completed several
-                <span class="every-second-word"> online courses</span>
-                in
-                <span class="every-second-word"> web development,</span>
-                <span class="every-second-word"> graphic design,</span> and
-                <span class="every-second-word"> user experience.</span>
+                In the end of 2021 I took a Full Stack development at HackerU
+                College, and I've completed several online courses in web
+                development, graphic design, and user experience.
               </p>
             </div>
             <div class="object"></div>
             <div class="educational-skills about-paragraph">
               <p class="educational-about">
-                Some of my
-                <span class="every-second-word"> Skills</span> include:
+                Some of my SKILLS include:
               </p>
               <ul class="educational-table">
                 <li>HTML / CSS</li>
@@ -431,7 +391,10 @@
             CONTACT ME
           </h1>
           <div class="contact-links">
-            <a href="mailto:zivgl66@gmail.com" target="_blank" class="link1 link-animate"
+            <a
+              href="mailto:zivgl66@gmail.com"
+              target="_blank"
+              class="link1 link-animate"
               ><i class="fa-solid fa-square-envelope"></i
             ></a>
             <a
@@ -447,7 +410,10 @@
               class="link3 link-animate"
               ><i class="fa-brands fa-square-instagram"></i>
             </a>
-            <a href="https://github.com/Zivgl66" target="_blank" class="link4 link-animate"
+            <a
+              href="https://github.com/Zivgl66"
+              target="_blank"
+              class="link4 link-animate"
               ><i class="fa-brands fa-square-github"></i
             ></a>
           </div>
