small screen - added section margin after 1st

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </svg>
           </div>
         </section>
-        <!-- <div class="section-margin"></div> -->
+        <div class="section-margin"></div>
         <!--                  Second Section                   -->
 
         <section class="section section-second section2">
