--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0 , user-scalable=no"
+    />
     <title>Ziv Gliser</title>
   </head>
   <body class="light-theme">
