--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
                 <li>HTML / CSS</li>
                 <li>JavaScript / jQuery / TypeScript</li>
                 <li>React.js / Angular / Vite</li>
+                <li>Python</li>
                 <li>Next.js / Vue.js / Three.js</li>
                 <li>Node.js / PHP</li>
                 <li>Firebase / MongoDB / SQL</li>
@@ -292,7 +293,7 @@
               <div class="card" id="4">
                 <div class="card-top">
                   <div class="card-img">
-                    <img src="./Assets/ZivPortLogo.png" alt="Fallback Image" />
+                    <img src="./Assets/SpaceshipLogo.png" alt="Fallback Image" />
                     <img
                       src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExYjcwMTAxZmU0YmZiM2ZiYjM3ZDkwYzM5NTgzODU0ODU3NWVjOGE1YiZjdD1n/tlGD7PDy1w8fK/giphy.gif"
                       alt="Your Project Gif"
@@ -303,36 +304,33 @@
                   </div>
                 </div>
                 <div class="card-content">
-                  <h2 class="card-header">Portfolio Ziv</h2>
+                  <h2 class="card-header">Spaceship Battle!</h2>
                   <div class="card-tech">
                     <ul>
-                      <li>Vite</li>
-                      <li>Three.js</li>
-                      <li>Blender</li>
+                      <li>Python</li>
+                      <li>pygame</li>
                     </ul>
                   </div>
                   <p class="card-summary">
-                    A Portfolio website showcasing my developer tools as well as
-                    my designing skills.
+                    A Spaceship battle game, created using pygame library.
                   </p>
-
                   <div class="card-links">
                     <div class="card-link">
                       <a
-                        href="https://github.com/Zivgl66/Ziv-Porfolio"
+                        href="https://github.com/Zivgl66/Spaceship-pygame"
                         target="_blank"
                       >
                         <i class="fa-brands fa-github"></i>
                       </a>
                     </div>
-                    <div class="card-link">
+                    <!-- <div class="card-link">
                       <a
                         href="https://ziv-porfolio.vercel.app/"
                         target="_blank"
                       >
                         <i class="fa-solid fa-arrow-up-right-from-square"></i>
                       </a>
-                    </div>
+                    </div> -->
                   </div>
                 </div>
               </div>
