add gifs to the project cards when hovering

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                   <div class="card-img">
                     <img src="./Assets/pokedexLogo.png" alt="Fallback Image" />
                     <img
-                      src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExYjcwMTAxZmU0YmZiM2ZiYjM3ZDkwYzM5NTgzODU0ODU3NWVjOGE1YiZjdD1n/tlGD7PDy1w8fK/giphy.gif"
+                      src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExYmM2NWRjODRkOTlmYzRlNWJjZWYwZmNhNDU4Zjg4NmRmMGUyN2QyMiZlcD12MV9pbnRlcm5hbF9naWZzX2dpZklkJmN0PWc/ZbvDjYzfCtVzrd4P1g/giphy.gif"
                       alt="Your Project Gif"
                     />
                   </div>
@@ -210,7 +210,7 @@
                   <div class="card-img">
                     <img src="./Assets/AmazoniaLogo.png" alt="Fallback Image" />
                     <img
-                      src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExYjcwMTAxZmU0YmZiM2ZiYjM3ZDkwYzM5NTgzODU0ODU3NWVjOGE1YiZjdD1n/tlGD7PDy1w8fK/giphy.gif"
+                      src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExOWJkNDIxOGNmOWNmZGI5N2U3ZjA2ZjhiNzhlYTNiYTc5NDgyYTI5OSZlcD12MV9pbnRlcm5hbF9naWZzX2dpZklkJmN0PWc/YtjJXqpdZkplctaAug/giphy.gif"
                       alt="Your Project Gif"
                     />
                   </div>
@@ -248,7 +248,7 @@
                   <div class="card-img">
                     <img src="./Assets/PortLogo.png" alt="Fallback Image" />
                     <img
-                      src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExYjcwMTAxZmU0YmZiM2ZiYjM3ZDkwYzM5NTgzODU0ODU3NWVjOGE1YiZjdD1n/tlGD7PDy1w8fK/giphy.gif"
+                      src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExZWQxZTNkNmY5M2EwNDcwY2JhMDU0YjY1YzgwYTgzMjI0Y2NlYjYzMSZlcD12MV9pbnRlcm5hbF9naWZzX2dpZklkJmN0PWc/QXRjEwKneUVGnCLI4f/giphy.gif"
                       alt="Your Project Gif"
                     />
                   </div>
@@ -293,9 +293,12 @@
               <div class="card" id="4">
                 <div class="card-top">
                   <div class="card-img">
-                    <img src="./Assets/SpaceshipLogo.png" alt="Fallback Image" />
                     <img
-                      src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExYjcwMTAxZmU0YmZiM2ZiYjM3ZDkwYzM5NTgzODU0ODU3NWVjOGE1YiZjdD1n/tlGD7PDy1w8fK/giphy.gif"
+                      src="./Assets/SpaceshipLogo.png"
+                      alt="Fallback Image"
+                    />
+                    <img
+                      src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExNTFkMWNiMjVlMjVmOTcwMjFlNzdiOGNlYjhkMmZjYjBhOWEyMTBkNyZlcD12MV9pbnRlcm5hbF9naWZzX2dpZklkJmN0PWc/q913aPIpGB8qDaapEz/giphy-downsized-large.gif"
                       alt="Your Project Gif"
                     />
                   </div>
@@ -342,7 +345,7 @@
                       alt="Fallback Image"
                     />
                     <img
-                      src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExYjcwMTAxZmU0YmZiM2ZiYjM3ZDkwYzM5NTgzODU0ODU3NWVjOGE1YiZjdD1n/tlGD7PDy1w8fK/giphy.gif"
+                      src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExNTkzNTQ3MjYyYTI0YWIwNjBmZDE3NzJlZGI4Mzg2ZDA1NWUxYmI1OCZlcD12MV9pbnRlcm5hbF9naWZzX2dpZklkJmN0PWc/QdytnseFLcnaLrxePo/giphy.gif"
                       alt="Your Project Gif"
                     />
                   </div>
