--- a/index.html
+++ b/index.html
@@ -326,14 +326,11 @@
                         <i class="fa-brands fa-github"></i>
                       </a>
                     </div>
-                    <!-- <div class="card-link">
-                      <a
-                        href="https://ziv-porfolio.vercel.app/"
-                        target="_blank"
-                      >
+                    <div class="card-link">
+                      <a href="https://ufile.io/rmxltmf3" target="_blank">
                         <i class="fa-solid fa-arrow-up-right-from-square"></i>
                       </a>
-                    </div> -->
+                    </div>
                   </div>
                 </div>
               </div>
