updated spaceship download link

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                       </a>
                     </div>
                     <div class="card-link">
-                      <a href="https://ufile.io/rmxltmf3" target="_blank">
+                      <a href="https://ufile.io/o7e6a4ty" target="_blank">
                         <i class="fa-solid fa-arrow-up-right-from-square"></i>
                       </a>
                     </div>
